<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fbchat.ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_user_block"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_image"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:src="@drawable/default_photo"
            app:civ_border_color="#FF000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/setting_user_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/settings_vertical_margin"
            android:text="Zoya Nigger"
            android:textColor="@color/accent_color"
            android:textSize="@dimen/normalText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_profile_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_user_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_status_text"
            android:textColor="@color/accent_dark_color"
            android:textSize="@dimen/smallText"
            app:layout_constraintStart_toStartOf="@id/setting_user_full_name"
            app:layout_constraintTop_toBottomOf="@id/setting_user_full_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:text="@string/settings_text_account"
        android:textColor="@color/primary"
        android:textSize="@dimen/smallText"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_user_block" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_set_phone_number"
        style="@style/settingsButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account">

        <TextView
            android:id="@+id/settings_phone_number"
            style="@style/settingsNormalText"
            tools:text="@string/settings_default_phone_number"
            app:layout_constraintStart_toStartOf="@id/btn_set_phone_number"
            app:layout_constraintTop_toTopOf="@id/btn_set_phone_number" />

        <TextView
            android:id="@+id/settings_label_phone_number"
            style="@style/smallText"
            android:text="@string/settings_label_text_phone_number"
            app:layout_constraintStart_toStartOf="@id/btn_set_phone_number"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_number" />

        <View
            style="@style/separator"
            app:layout_constraintStart_toStartOf="@id/btn_set_phone_number"
            app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_set_username"
        style="@style/settingsButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_set_phone_number">

        <TextView
            android:id="@+id/settings_username"
            style="@style/settingsNormalText"
            tools:text="@string/settings_default_login"
            app:layout_constraintStart_toStartOf="@id/btn_set_username"
            app:layout_constraintTop_toTopOf="@id/btn_set_username" />

        <TextView
            android:id="@+id/settings_label_username"
            style="@style/smallText"
            android:text="@string/settings_label_text_login"
            app:layout_constraintStart_toStartOf="@id/btn_set_username"
            app:layout_constraintTop_toBottomOf="@id/settings_username" />

        <View
            style="@style/separator"
            app:layout_constraintStart_toStartOf="@id/btn_set_username"
            app:layout_constraintTop_toBottomOf="@id/settings_label_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_set_bio"
        style="@style/settingsButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_set_username">

        <TextView
            android:id="@+id/settings_bio"
            style="@style/settingsNormalText"
            tools:text="@string/settings_default_bio"
            app:layout_constraintStart_toStartOf="@id/btn_set_bio"
            app:layout_constraintTop_toTopOf="@id/btn_set_bio" />

        <TextView
            android:id="@+id/settings_label_bio"
            style="@style/smallText"
            android:text="@string/settings_label_text_bio"
            app:layout_constraintStart_toStartOf="@id/btn_set_bio"
            app:layout_constraintTop_toBottomOf="@id/settings_bio" />

        <View
            style="@style/separator"
            app:layout_constraintStart_toStartOf="@id/btn_set_bio"
            app:layout_constraintTop_toBottomOf="@id/settings_label_bio" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_photo_picker"
        android:layout_width="@dimen/settings_user_photo_width"
        android:layout_height="@dimen/settings_user_photo_height"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:src="@drawable/ic_camera"
        app:civ_circle_background_color="@color/accent_color"
        app:layout_constraintBottom_toBottomOf="@+id/settings_user_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_user_block" />

</androidx.constraintlayout.widget.ConstraintLayout>